tests/baselines/reference/parserFuzz1.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserFuzz1.ts (6 errors) ====
    cla <ss {
            ~
!!! error TS1005: ';' expected.
    ~~~
!!! error TS2304: Cannot find name 'cla'.
         ~~
!!! error TS2304: Cannot find name 'ss'.
      _ static try
        ~~~~~~
!!! error TS1005: ';' expected.
                  
!!! error TS1005: '{' expected.
      ~
!!! error TS2304: Cannot find name '_'.